Updated QuickBlock